# Fastest_Image_Pattern_Matching-DLL

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: cmake-multi-platform.yml
examples/: example_c.c  example_cpp.cpp
include/: CerealSerialization.hpp  TemplateMatcher.h  TemplateMatcherC.h  simd_utils.h
src/: TemplateMatcher.cpp  TemplateMatcherC.cpp  simd_utils.cpp
